--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,5 +3,13 @@
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
-  <display-name>Archetype Created Web Application</display-name>
+  <servlet>
+    <servlet-name>WeatherRestServlet</servlet-name>
+    <servlet-class>com.weather.api.rest.WeatherRestServlet</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>WeatherRestServlet</servlet-name>
+    <url-pattern>/test/*</url-pattern>
+  </servlet-mapping>
 </web-app>
